--- a/onetap/package.json
+++ b/onetap/package.json
@@ -6,6 +6,7 @@
     "antd": "^3.0.1",
     "axios": "^0.17.1",
     "jquery": "^3.2.1",
+    "lodash": "^4.17.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.0.17"
