--- a/onetap/package.json
+++ b/onetap/package.json
@@ -4,12 +4,51 @@
   "private": true,
   "dependencies": {
     "antd": "^3.0.1",
+    "autoprefixer": "^7.2.3",
     "axios": "^0.17.1",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-lodash": "^3.3.2",
+    "babel-plugin-object-assign": "^1.2.1",
+    "babel-plugin-transform-object-assign": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-latest": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "chunk-manifest-webpack-plugin": "^1.1.2",
+    "classnames": "^2.2.5",
+    "clean-webpack-plugin": "^0.1.17",
+    "css-loader": "^0.28.7",
+    "express": "^4.16.2",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "fontfaceobserver": "^2.0.13",
+    "isomorphic-ensure": "^1.0.1",
+    "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
+    "moment": "^2.19.4",
+    "node-sass": "^4.7.2",
+    "path": "^0.12.7",
+    "postcss-loader": "^2.0.9",
+    "qs": "^6.5.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.0.17"
+    "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
+    "react-scripts": "1.0.17",
+    "react-select": "^1.1.0",
+    "redis": "^2.8.0",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
+    "request": "^2.83.0",
+    "reselect": "^3.0.1",
+    "sass-loader": "^6.0.6",
+    "webpack": "^3.10.0",
+    "webpack-manifest-plugin": "^1.3.2",
+    "webpack-md5-hash": "0.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
