--- a/onetap/package.json
+++ b/onetap/package.json
@@ -45,7 +45,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
-    "react-router": "^4.2.0",
+    "react-router": "3.2.0",
     "react-scripts": "1.0.17",
     "react-select": "^1.1.0",
     "react-webcam": "^0.2.0",
