--- a/onetap/package.json
+++ b/onetap/package.json
@@ -41,6 +41,7 @@
     "node-sass": "^4.7.2",
     "path": "^0.12.7",
     "postcss-loader": "^2.0.9",
+    "prop-types": "^15.6.0",
     "qs": "^6.5.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
