--- a/onetap/src/constants/constants.js.sample
+++ b/onetap/src/constants/constants.js.sample
@@ -1,6 +1,6 @@
 const constants = {
-    KAIROS_APP_ID: 'sometinykey',
-    KAIROS_APP_KEY: 'someextralongkeyhere'
+  KAIROS_APP_ID: 'sometinykey',
+  KAIROS_APP_KEY: 'someextralongkeyhere'
 };
 
-module.exports = constants;
+export default constants;
