pu api endpoint in config

--- a/onetap/src/constants/constants.js.sample
+++ b/onetap/src/constants/constants.js.sample
@@ -1,6 +1,7 @@
 const constants = {
   KAIROS_APP_ID: 'sometinykey',
-  KAIROS_APP_KEY: 'someextralongkeyhere'
+  KAIROS_APP_KEY: 'someextralongkeyhere',
+  API_ENDPOINT: 'http://10.0.1.2:5000'
 };
 
 export default constants;
